# beaver

./: .editorconfig  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
extras/: generate-keys.sh
extras/base-env/: Dockerfile  Makefile  entrypoint.sh
extras/tests/: api_test.http  http-client.env.json
src/: main.py
src/beaver/: __init__.py  boot.py  configuration.py
src/beaver/environments/: api.py
src/beaver/server/: __init__.py  admin.py  health.py  response.py
